tests/sparql/test_suites/internal/ill-typed/good_queries/values/float.rq
PREFIX : <http://www.path.com/>
SELECT ?o (STR(?o) AS ?str)
WHERE {
  VALUES (?s ?o) {
    (:1 ""^^xsd:float)
    (:2 "x"^^xsd:float)
    (:3 "asdfasdfasdf"^^xsd:float)
    (:4 "1.5"^^xsd:float)
    (:5 "1"^^xsd:float)
  }
}
ORDER BY ?s
